--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "[OC] Project 3 : Ohmyfood! Paris",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch ./sass/main.scss:css/style.css"
+    "sass": "sass --watch ./sass/main.scss:css/style.css",
+    "prefix": "postcss ./css/style.css --use autoprefixer -d ./css/prefixed/"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,7 @@
   ],
   "author": "Jérôme FOULET",
   "license": "ISC",
+  "browserslist": "last 4 versions",
   "bugs": {
     "url": "https://github.com/jerome-foulet/FouletJerome_3_14022022/issues"
   },
